Changes according to comments
Changed link classes, added svg to links/buttons

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -32,8 +32,10 @@
                     <use href="../images/sprite.svg#icon-menu-burger"></use>
                 </svg>
             </button>
-            <button class="button button--primary">
-                <span class="button-text">Buy now</span>
+            <button class="button--arrow-theme-white button">Buy now
+                <svg class="button__icon">
+                    <use href="../images/sprite.svg#icon-half-arrow-right-red"></use>
+                </svg>
             </button>
             <div class="mobile-menu">
                 <button class="mobile-menu__button-close button">
@@ -41,8 +43,10 @@
                         <use href="../images/sprite.svg#icon-menu-close"></use>
                     </svg>
                 </button>
-                <button class="button button--primary">
-                    <span class="button-text">Buy now</span>
+                <button class="button--arrow-theme-white button">Buy now
+                    <svg class="button__icon">
+                        <use href="../images/sprite.svg#icon-half-arrow-right-red"></use>
+                    </svg>
                 </button>
                 <ul class="mobile-menu-nav list">
                     <li class="mobile-menu-nav__item">
@@ -69,14 +73,18 @@
                 <h1 class="hero__title">Ice cream made with<span class="hero-title__accent">passion</span></h1>
                 <ul class="hero-nav list">
                     <li class="hero-nav__item">
-                        <a href="#products" class="hero-nav__link link">Products</a>
+                        <a href="#products" class="button button--theme-red link">Products</a>
                     </li>
                     <li class="hero-nav__item">
-                        <a href="#description" class="hero-nav__link link">How it's made?</a>
+                        <a href="#description" class="button button--theme-white link">How it's made?</a>
                     </li>
                 </ul>
-                <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et</p>
+                <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                <a href="#" class="hero__link button">
+                    <svg class="hero__icon">
+                        <use href="../images/sprite.svg#arrow-right"></use>
+                    </svg>
+                </a>
             </div>
             <div class="hero__image-background"></div>
             <ul class="hero-statistics">
