--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -6,6 +6,8 @@
 
 .advantages__list {
     padding-bottom: 97px;
+    padding-left: 5px;
+    padding-right: 5px;
 
 }
 
@@ -71,6 +73,8 @@
    }
    .advantages__list {
        display: flex;
+       padding-left: 21px;
+       padding-right: 21px;
    }
    .milk::before {
        margin-bottom: 36px;
@@ -101,6 +105,10 @@
     }
     .heart::before {
         margin-bottom: 40px;
+    }
+    .advantages__list {
+        padding-left: 100px;
+        
     }
 
 }
