--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -7,7 +7,7 @@
             media="(min-width: 768px)">
             <source srcset="../src/images/mobile/m-about-gallery.png 1x, ../src/images/mobile/m-about-gallery@2x.png 2x"
             media="(min-width: 480px)">
-       <img src="../src/images/mobile/m-about-gallery.png" alt="" class="gallery__img"> 
+            <img src="../src/images/mobile/m-about-gallery.png" alt="фото-галлерея" class="gallery__img">
     </picture>
     </div>
 </section>
