--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,24 +1,31 @@
 <main>
     <section class="section-products">
         <div class="container">
-            <h2 class="section-products__title">100% natural</h2>
-            <p class="section__description">products</p>
+            <h2 class="section-products__title">
+                <span class="section-products__label">100% natural</span>
+                products
+            </h2>
+            
         <ul class="products list">
             <li class="products__item">
-                <h3 class="products__subtitle">::before(.svg), ::after((border-radius:50%)</h3>
-                <p class="products__description"></p>
+                <h3 class="products__subtitle">ice cream</h3>
+                <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
+                <a href="#" class="products__link">
+                    <button type="button" class="products__arrow">
+                        
+                    </button>
+                </a>
+            </li>
+
+            <li class="products__item">
+                <h3 class="products__subtitle">ice coffee</h3>
+                <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                 <a href="" class="products__link">.png(?)</a>
             </li>
 
             <li class="products__item">
-                <h3 class="products__subtitle">::before(.svg), ::after((border-radius:50%)</h3>
-                <p class="products__description"></p>
-                <a href="" class="products__link">.png(?)</a>
-            </li>
-
-            <li class="products__item">
-                <h3 class="products__subtitle">::before(.svg), ::after((border-radius:50%)</h3>
-                <p class="products__description"></p>
+                <h3 class="products__subtitle">milkshakes</h3>
+                <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                 <a href="" class="products__link">.png(?)</a>
             </li>
             </ul>
