--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,15 +1,92 @@
 .section-products {
-    background: black;
 
+    &__label {
+    display: block;
+    font-family: $secondary-font;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.16;
+    text-align: center;
+    text-transform: uppercase;
+    color: $label-color;
+    margin-bottom: 15px;
+
+    }
     &__title {
     font-family: $secondary-font;
     font-style: normal;
     font-weight: normal;
-    font-size: 60px;
-    line-height: 34px;
+    font-size: 34px;
+    line-height: 1.14;
     text-align: center;
     text-transform: uppercase;
-    color: $label-color;
+    color:$accent-color;
+    margin-bottom: 144px;
 
-    }
 }
+}
+.products {
+    position: relative;
+    &__item {
+        max-width: 280px;
+        border-radius: 24px;
+        padding: 0 40px;
+        
+    }
+    &__item::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-50%, -50%);
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: url(../images/products/mobile/mobile-1.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+    
+    }
+    &__item:first-child {
+        background: $hero-bg-color;
+    }
+    &__item:nth-child(2) {
+        background: $secondary-product-bg-color;
+    }
+    &__item:nth-child(3) {
+        background: $third-product-bg-color;
+    }
+    &__subtitle {
+        padding-top: 160px;
+        padding-bottom: 60px;
+        font-family: $secondary-font;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: $primary-text-color;
+    }
+    &__description {
+        font-family: $main-font;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.5;    
+        text-align: center;
+        letter-spacing: 0.04em;
+        color: $primary-text-color;
+        padding-bottom: 30px;
+    }
+    &__link {
+        widows: 40px;
+        height: 40px;
+        
+    }
+
+}
+
+// ::before(.svg), ::after((border-radius:50%)
