--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -5,6 +5,16 @@
   text-align: center;
 }
 
+.button-products {
+  border-radius: 50%;
+  border: 0;
+  background-color: transparent;
+}
+
+.button-products:hover {
+  cursor: pointer;
+}
+
 .products-item-cream {
   border-radius: 24px;
   background-color: #ffb8ca;
@@ -20,7 +30,7 @@
 
 .main-title {
   margin-top: 15px;
-  margin-bottom: 150px;
+  margin-bottom: 144px;
 }
 
 .products {
@@ -46,16 +56,17 @@
   text-transform: uppercase;
 }
 
-.products-title-cream {
-  margin-top: 161px;
+.products-list h3 {
   color: var(--primary-white-color);
+  font-family: Titan One;
+  font-weight: 400;
   font-size: 20px;
   line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
 }
 
-.products-title-cream:before {
+.products-item-cream:before {
   content: '';
   display: block;
   position: fixed;
@@ -65,23 +76,24 @@
   background-position: center;
   width: 249px;
   height: 252px;
-  width: 100%;
+
   margin: 0 auto;
 
   position: absolute;
-  bottom: 339px;
+  bottom: 346px;
   left: 50%;
   transform: translateX(-50%);
 }
 
-.products-title-cream:after {
+.products-list h3:after {
   content: '';
   display: block;
   background-image: url('../../src/images/group.svg');
   width: 26px;
-  height: 26px;
+  height: 6px;
   margin: 30px auto;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .products-item-coffee {
@@ -93,16 +105,7 @@
   position: relative;
 }
 
-.products-title-coffee {
-  margin-top: 161px;
-  color: var(--primary-white-color);
-  font-size: 20px;
-  line-height: 1.15;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-}
-
-.products-title-coffee:before {
+.products-item-coffee:before {
   content: '';
   display: block;
   position: fixed;
@@ -112,23 +115,13 @@
   background-position: center;
   width: 249px;
   height: 252px;
-  width: 100%;
+
   margin: 0 auto;
 
   position: absolute;
-  bottom: 339px;
+  bottom: 346px;
   left: 50%;
   transform: translateX(-50%);
-}
-
-.products-title-coffee:after {
-  content: '';
-  display: block;
-  background-image: url('../../src/images/group.svg');
-  width: 26px;
-  height: 26px;
-  margin: 30px auto;
-  background-repeat: no-repeat;
 }
 
 .products-item-milkshakes {
@@ -140,16 +133,7 @@
   position: relative;
 }
 
-.products-title-milkshakes {
-  margin-top: 161px;
-  color: var(--primary-white-color);
-  font-size: 20px;
-  line-height: 1.15;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-}
-
-.products-title-milkshakes:before {
+.products-item-milkshakes:before {
   content: '';
   display: block;
   position: fixed;
@@ -159,29 +143,24 @@
   background-position: center;
   width: 249px;
   height: 252px;
-  width: 100%;
+
   margin: 0 auto;
 
   position: absolute;
-  bottom: 339px;
+  bottom: 346px;
   left: 50%;
   transform: translateX(-50%);
-}
-
-.products-title-milkshakes:after {
-  content: '';
-  display: block;
-  background-image: url('../../src/images/group.svg');
-  width: 26px;
-  height: 26px;
-  margin: 30px auto;
-  background-repeat: no-repeat;
 }
 
 .products-arrow {
   width: 40px;
   height: 40px;
-  margin-bottom: 41px;
+}
+
+.products-list > li {
+  padding-top: 161px;
+  padding-bottom: 41px;
+  height: 485px;
 }
 
 .produc-item {
@@ -202,4 +181,185 @@
   margin-bottom: 30px;
   color: var(--primary-white-color);
   max-width: 200px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+@media (min-width: 480px) {
+  .products-list > li {
+    width: 280px;
+  }
+
+  .products-list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .products-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
+    margin: 0;
+    padding: 0;
+  }
+
+  .description-text {
+    display: none;
+  }
+
+  .products-list > li {
+    padding-top: 161px;
+    padding-bottom: 41px;
+    width: 220px;
+    height: 485px;
+  }
+
+  .description-container {
+    max-height: 124px;
+    overflow: hidden;
+    margin-bottom: 40px;
+  }
+
+  .main-title {
+    margin-bottom: 150px;
+  }
+
+  .products-item-cream:before {
+    background-image: url('../../src/images/tablet/advantages/tablet-prod-icecream.png');
+    width: 220px;
+    height: 233px;
+    bottom: 363px;
+  }
+
+  .products-item-coffee:before {
+    background-image: url('../../src/images/tablet/advantages/tablet-prod-coffee.png');
+    width: 220px;
+    height: 233px;
+    bottom: 363px;
+  }
+
+  .products-item-milkshakes:before {
+    background-image: url('../../src/images/tablet/advantages/tablet-prod-shake.png');
+    width: 220px;
+    height: 233px;
+    bottom: 363px;
+  }
+
+  .products-list > li {
+    padding-top: 152px;
+  }
+
+  .products-list > li:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  .container {
+    margin: 0;
+    width: 100%;
+  }
+
+  .products-label {
+    font-size: 26px;
+    line-height: 1.15;
+    text-transform: uppercase;
+  }
+
+  .main-title {
+    font-size: 48px;
+    line-height: 1.14;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+
+  .products-description {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.78;
+    max-width: 198px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (min-width: 1280px) {
+  container {
+    width: 1280px;
+    padding: 0 154px;
+  }
+
+  .products-list > li {
+    padding-top: 163px;
+    padding-bottom: 50px;
+    width: 330px;
+    height: 525px;
+  }
+
+  .main-title {
+    margin-bottom: 259px;
+  }
+
+  .products-item-cream:before {
+    background-image: url('../../src/images/desktop/advantages/desk-prod-icecream.png');
+    width: 335px;
+    height: 335px;
+    top: -210px;
+  }
+
+  .products-item-coffee:before {
+    background-image: url('../../src/images/desktop/advantages/desk-prod-coffee.png');
+    width: 335px;
+    height: 335px;
+    top: -210px;
+  }
+
+  .products-item-milkshakes:before {
+    background-image: url('../../src/images/desktop/advantages/desk-prod-shake.png');
+    width: 335px;
+    height: 335px;
+    top: -210px;
+  }
+  .products-title-cream:after {
+    margin: 32px auto;
+  }
+
+  .products-title-coffee:after {
+    margin: 32px auto;
+  }
+
+  .products-title-milkshakes:after {
+    margin: 32px auto;
+  }
+
+  .products-description {
+    font-size: 16px;
+    line-height: 1.75;
+    margin-bottom: 50px;
+    max-width: 241px;
+  }
+
+  .products-list > li {
+    padding-top: 161px;
+    padding-bottom: 50px;
+  }
+
+  .products-label {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
+
+  .products-list h3 {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
+
+  .main-title {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
 }
