--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,8 @@
 <section class="section-reviews">
   <div class="container">
     <h2 class="section-reviews__title visually-hidden"></h2>
-    <ul class="slider reviews list">
-      <li class="slide reviews__item">
+    <div class="slider reviews list">
+      <div class="slide reviews__item">
         <img
           class="reviews__image"
           srcset="./images/customer-reviews/img-1@2x.png 2x"
@@ -17,9 +17,9 @@
           </p>
         </div>
         <h3 class="reviews__name">Emily, Los Angeles</h3>
-      </li>
+      </div>
 
-      <li class="slide reviews__item">
+      <div class="slide reviews__item">
         <img
           class="reviews__image"
           srcset="./images/customer-reviews/img-2@2x.png 2x"
@@ -34,9 +34,9 @@
           </p>
         </div>
         <h3 class="reviews__name">Emily, Los Angeles</h3>
-      </li>
+      </div>
 
-      <li class="slide reviews__item">
+      <div class="slide reviews__item">
         <img
           class="reviews__image"
           srcset="./images/customer-reviews/img-3@2x.png 2x"
@@ -51,13 +51,7 @@
           </p>
         </div>
         <h3 class="reviews__name">Emily, Los Angeles</h3>
-      </li>
-    </ul>
-
-    <!-- <ul class="markers list">
-      <li class="markers__item"></li>
-      <li class="markers__item"></li>
-      <li class="markers__item"></li>
-    </ul> -->
+      </div>
+    </div>
   </div>
 </section>
