корректировка кнопок + якоря

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about__section">
+<section class="about__section" id="about_us">
     <div class="container container__bg">
         <label class="about__subtitle">tradition and love </label>
         <h2 class="about__title">how it’s made?</h2>
