--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts container">
+<section class="contacts container" id="contact">
   <h2 class="visually-hidden">Контакты</h2>
   <div class="contacts__block">
     <div class="contacts__card">
