--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,4 +1,4 @@
-<section class="customer-reviews">
+<section class="customer-reviews" id="reviews">
     <div class="container">
         <picture>
             <img srcset="../src/images/mobile/m-comment-1@2x.png 2x" src="../src/images/mobile/m-comment-1.png" alt="cliient"
