--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,10 +7,10 @@
                  </h1>
                  <div class="hero__btn">
                      <button class="hero__btn-products">
-                         <a class="hero__link-products" href="">Products</a>
+                         <a class="hero__link-products" href="#products">Products</a>
                      </button>
                      <button class="hero__btn-made">
-                         <a class="hero__link-made" href="">How it’s made?</a>
+                         <a class="hero__link-made" href="#about_us">How it’s made?</a>
                      </button>
                 </div>
             </div>
