--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products__section">
+<section class="products__section" id="products">
     <div class="container">
         <label for="" class="products__subtitle">100% natural</label>
         <h2 class="products__title">products</h2>
