--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -64,6 +64,7 @@ margin-bottom: 43px;
     box-sizing: border-box;
     height: 32px;
     width: 32px;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
