--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -230,6 +230,8 @@ screen and (min-resolution: 2dppx) {
 
     display: flex;
     align-items: center;
+    cursor: pointer;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     width: 176px;
     height: 44px;
@@ -240,6 +242,10 @@ screen and (min-resolution: 2dppx) {
 
     border-radius: 22px;
     padding: 10px 37px;
+        &:hover,
+        &:focus {
+        background: #ECEBEB;
+    }
 }
 
 @media screen and (min-width:768px){
