--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -106,9 +106,11 @@ margin-top: 34px;
     color: var(--text-main-color);
     border-radius: 22px;
     border: none;
+    cursor: pointer;
     font-size: 16px;
 line-height: 1.3;
 font-weight: 700;
+transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -125,9 +127,11 @@ font-weight: 700;
     color: var(--text-accent-color);
     border-radius: 22px;
     border: none;
+    cursor: pointer;
     font-size: 16px;
 line-height: 1.3;
 font-weight: 700;
+transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
