--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -34,6 +34,7 @@
   font-size: 16px;
   line-height: 1.31;
   color: var(--text-main-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: var(--text-accent-color);
@@ -55,12 +56,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (max-width: 767px) {
     display: none;
   }
   &:hover,
   &:focus {
-    color: #c7133e;
+    background: #ECEBEB;
   }
 }
 
@@ -73,6 +75,8 @@
   display: inline-block;
   height: 12px;
   margin-left: 10px;
+  width: 6px;
+  height: 9px;
 }
 
 .mobile-open-btn {
