Исправления по 3м секциям (footer, gallary, advantages)

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,15 +3,15 @@
     <h2 class="section__title visually-hidden">Advantages</h2>
 
     <ul class="advantages list">
-    <li class="advantages__item advantages__item_first">
+    <li class="advantages__item advantages__item-first">
         <p class="advantages__number ">721</p>
         <p class="advantages__description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
     </li>
-    <li class="advantages__item advantages__item_secondary">
+    <li class="advantages__item advantages__item-secondary">
         <p class="advantages__number ">16kg</p>
         <p class="advantages__description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
     </li>
-    <li class="advantages__item advantages__item_third">
+    <li class="advantages__item advantages__item-third">
         <p class="advantages__number">84</p>
         <p class="advantages__description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
     </li>
