--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -11,7 +11,7 @@
         width: 100%;
         max-width: 232px;
     }
-    &__span_title {
+    &__span-title {
         display: block;
         font-size: 34px;
         line-height: 1.15;
@@ -26,12 +26,12 @@
         margin-bottom: 46px;
     }
 
-    &__social_link:hover &__social_icon,
-    &__social_link:focus &__social_icon {
+    &__social-link:hover &__social-icon,
+    &__social-link:focus &__social-icon {
         fill: $accent-color;
     }
 
-    &__social_icon {
+    &__social-icon {
         width: 34px;
         height: 34px;
         fill: $label-color;
@@ -42,7 +42,7 @@
         margin-right: 28px;
     }
 
-    &__auth_link {
+    &__auth-link {
         font-family: $main-font;
         font-style: normal;
         font-weight: 700;
@@ -50,11 +50,11 @@
         line-height: 1.86;
         color: $primary-desc-color;
     }
-    &__span_tell {
+    &__span-tell {
         color: $accent-color;
         margin-left: 5px;
     }
-    &__social_wrapper {
+    &__social-wrapper {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -71,7 +71,7 @@
         max-width: 145px;
 
     }
-    &__license_wrapper {
+    &__license-wrapper {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -86,18 +86,17 @@
         max-width: 340px;
     }
 
-    &__span_title {
+    &__span-title {
         font-size: 48px;
         margin-bottom: 0;
     }
 
-    &__auth_link {
+    &__auth-link {
         font-size: 14px;
     }
     &__social-item:not(:last-child) {
         margin-right: 30px;
     }
-
 
     & .container {
         display: flex;
@@ -108,11 +107,14 @@
       line-height: 1.86;
       max-width: 280px;
     }
-    &__license_wrapper {
+    &__license-wrapper {
       padding-top: 29px;
       padding-bottom: 18px;
       border-top: 1px solid #E1E1E1;
       width: 100%;
+    }
+    &__social-wrapper {
+      padding-bottom: 0;
     }
 }
 @media screen and (min-width: 1280px) {
@@ -121,16 +123,16 @@
     max-width: 475px;
   }
 
-  &__span_title {
+  &__span-title {
     font-size: 58px;
     margin-bottom: 0;
   }
 
-  &__auth_link {
+  &__auth-link {
     font-size: 16px;
   }
 
-  &__license_wrapper {
+  &__license-wrapper {
     padding-top: 10px;
     padding-bottom: 10px;
   }
