--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -1,3 +1,9 @@
-<div class="backdrop">
-    
+<div class="backdrop is-hidden" data-modal>
+    <div class="backdrop__modal">
+        <button class="backdrop__btn-close" data-modal-close>
+            <svg class="backdrop__modal-close-logo">
+                <use href="./images/sprite.svg#close-menu"></use>
+            </svg>
+        </button>
+    </div>
 </div>
