--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -90,7 +90,7 @@
   <div class="contacts__button">
     <ul class="contacts__button-list">
       <li class="contacts__button-list-item">
-        <button type="button" class="contacts__button-first">
+        <button type="button" class="contacts__button-first" data-modal-open>
           Our Locations
           <svg class="contacts__button-icon">
             <use href="./images/sprite.svg#arrow-right"></use>
@@ -98,7 +98,7 @@
         </button>
       </li>
       <li class="contacts__button-list-item">
-        <button type="button" class="contacts__button-second">
+        <button type="button" class="contacts__button-second" data-modal-open>
           Franchise
           <svg class="contacts__button-icon">
             <use href="./images/sprite.svg#arrow-right-red"></use>
