--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,23 +10,27 @@
             <li class="products__item">
                 <h3 class="products__subtitle">ice cream</h3>
                 <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                <a href="#" class="products__link">
-                    <button type="button" class="products__arrow">
-                        
-                    </button>
+                <a href="" class="products__link">
+                    <svg class="products__icon" width="40" height="40">
+                        <use href="./images/sprite.svg#arrow-right"></use>
+                    </svg>
                 </a>
             </li>
 
             <li class="products__item">
                 <h3 class="products__subtitle">ice coffee</h3>
                 <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                <a href="" class="products__link">.png(?)</a>
+                <a href="" class="products__link">
+
+                </a>
             </li>
 
             <li class="products__item">
                 <h3 class="products__subtitle">milkshakes</h3>
                 <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                <a href="" class="products__link">.png(?)</a>
+                <a href="" class="products__link">
+
+                </a>
             </li>
             </ul>
         </div>
