--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -27,36 +27,82 @@
 }
 }
 .products {
-    position: relative;
+    @media screen and  (min-width: 768px) {
+        display: flex;
+    }
+
     &__item {
-        max-width: 280px;
+        max-width: 335px;
         border-radius: 24px;
         padding: 0 40px;
-        
+        position: relative;
+
+        @media screen and  (min-width: 768px) {
+            &:not(:last-child) {
+                margin-right: 20px;
+            }
+        }
     }
-    &__item::before {
+
+    &__item:not(:last-child) {
+        margin-bottom: 130px;
+
+    }
+    &__item:first-child::before {
         content: "";
         position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(-50%, -50%);
+        top: -140px;
+        left: 50%;
+        transform: translatex(-50%);
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 250px;
+        height: 250px;
         background-image: url(../images/products/mobile/mobile-1.png);
         background-repeat: no-repeat;
         background-size: contain;
     
     }
+    &__item:nth-child(2)::before {
+        content: "";
+        position: absolute;
+        top: -120px;
+        left: 50%;
+        transform: translatex(-50%);
+        display: block;
+        width: 250px;
+        height: 250px;
+        background-image: url(../images/products/mobile/mobile-2.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+    
+    }
+    &__item:nth-child(3)::before {
+        content: "";
+        position: absolute;
+        top: -110px;
+        left: 50%;
+        transform: translatex(-50%);
+        display: block;
+        width: 250px;
+        height: 250px;
+        background-image: url(../images/products/mobile/mobile-3.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+
+    }
+
     &__item:first-child {
         background: $hero-bg-color;
     }
+
     &__item:nth-child(2) {
         background: $secondary-product-bg-color;
     }
+
     &__item:nth-child(3) {
         background: $third-product-bg-color;
     }
+
     &__subtitle {
         padding-top: 160px;
         padding-bottom: 60px;
@@ -70,6 +116,7 @@
         text-transform: uppercase;
         color: $primary-text-color;
     }
+
     &__description {
         font-family: $main-font;
         font-style: normal;
@@ -80,13 +127,29 @@
         letter-spacing: 0.04em;
         color: $primary-text-color;
         padding-bottom: 30px;
+        position: relative;
     }
+    &__description::before {
+        content: "";
+        position: absolute;
+        width: 26px;
+        height: 6px;
+        top: -30px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-image: url(./../images/products/Group.svg);
+    }
+    
     &__link {
-        widows: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        width: 40px;
         height: 40px;
-        
+        background-color: $primary-text-color;
+        border-radius: 50%;
+        margin-bottom: 40px;
     }
 
 }
-
-// ::before(.svg), ::after((border-radius:50%)
