--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -1,7 +1,16 @@
-<div class="backdrop is-hidden" data-modal>
-    <div class="backdrop__modal">
-        <button class="backdrop__btn-close" data-modal-close>
-            <svg class="backdrop__modal-close-logo">
+<div class="contacts__backdrop is-hidden" data-modal>
+    <div class="contacts__backdrop-modal">
+        <button class="contacts__backdrop-btn-close" data-modal-close>
+            <svg class="contacts__backdrop-modal-close-logo">
+                <use href="./images/sprite.svg#close-menu"></use>
+            </svg>
+        </button>
+    </div>
+</div> 
+<div class="contacts__backdrop-fr is-hidden" data-modal2>
+    <div class="contacts__backdrop-fr-modal">
+        <button class="contacts__backdrop-fr-btn-close" data-modal-close2>
+            <svg class="contacts__backdrop-fr-modal-close-logo">
                 <use href="./images/sprite.svg#close-menu"></use>
             </svg>
         </button>
