--- a/src/sass/layout/_backdrop.scss
+++ b/src/sass/layout/_backdrop.scss
@@ -1,4 +1,4 @@
-.backdrop {
+.contacts__backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,9 +6,11 @@
     height: 100vh;
     background-color: rgba(219, 168, 217, 0.726);
     z-index: 4;
+    transition: 0.5s width ease 0.3s, 0.5s height ease 0.3s, 0.5s border-radius ease 0.5s;
+
 }
 
-.backdrop__modal {
+.contacts__backdrop-modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -28,7 +30,7 @@
     }
 }
 
-.backdrop__btn-close {
+.contacts__backdrop-btn-close {
     border-radius: 50%;
     position: absolute;
     top: 8px;
@@ -41,7 +43,7 @@
     outline: 0;
 }
 
-.backdrop__modal-close-logo {
+.contacts__backdrop-modal-close-logo {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -53,3 +55,57 @@
 .is-hidden {
     display: none;
 }
+
+
+.contacts__backdrop-fr {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(219, 168, 217, 0.726);
+    z-index: 4;
+}
+
+.contacts__backdrop-fr-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    width: 94%;
+    height: 94%;
+    max-width: 450px;
+    max-height: 610px;
+    padding: 40px;
+    background-color: rgb(255, 255, 255);
+    border: 10px solid var(--font-primary-color);
+    box-shadow: -1px -1px 0px 4px var(--font-item-secondary-color);
+    border-radius: 5%;
+    
+    @media screen and (min-width:1280px) {
+        max-width: 580px;
+    }
+}
+
+.contacts__backdrop-fr-btn-close {
+    border-radius: 50%;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--font-item-primary-color);
+    border: 1px solid rgb(255, 255, 255);
+    cursor: pointer;
+    outline: 0;
+}
+
+.contacts__backdrop-fr-modal-close-logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 15px;
+    height: 15px;
+}
+
