Slider and 3 add svg

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -140,3 +140,29 @@
     font-size: 20px;
   }
 }
+
+// SLIDER STYLES
+.slick-dots {
+  bottom: -45px;
+}
+
+.slick-dots li button {
+  width: 12px;
+  height: 12px;
+  background-image: url('../images/icon-ellipse.svg');
+  border-radius: 50%;
+  border: none;
+}
+.slick-dots li button:before {
+  display: none;
+}
+.slick-dots .slick-active button {
+  width: 13px;
+  height: 13px;
+  background-image: url('../images/icon-house.svg');
+  background-repeat: no-repeat;
+  border-radius: 0%;
+}
+.slick-slide img {
+  display: inline-block;
+}
