--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -23,9 +23,10 @@
         <p class="about__description-secondary">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
         <p class="about__description-tertiary">Aliquam erat volutpat. Aenean accumsan.</p>
         <span class="about__button">
-          <button class="button--primary">Read more
-            <svg class="button--primary__svg" width="4" height="8">
-              <use href="./images/sprite.svg#icon-half-arrow-right"></use>
+          <button type="button" class="button button--arrow-theme-white">
+            Read more
+            <svg class="button__icon">
+              <use href="./images/sprite.svg#icon-half-arrow-right-red"></use>
             </svg>
           </button>
         </span>
