--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -6,7 +6,7 @@
 
 body {
   color: var(--text-main-color);
-  background-color: var(--font-primary-color);
+  background-color: var(--text-accent-color);
   font-family: 'DM Sans', sans-serif;
   font-weight: 700;
   font-size: 16px;
