--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,16 +1,31 @@
 .header {
   width: 100%;
+
   @media screen and (min-width: 768px) {
     position: absolute;
+    z-index: 5;
   }
 }
 
 .header .container {
+  background-color: transparent;
+  max-width: 1280px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   padding-top: 6px;
-  @media screen and (min-width: 768px) {
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
     padding-top: 37px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-right: 112px;
+    padding-left: 40px;
+    max-width: 1280px;
   }
 }
 
@@ -22,7 +37,7 @@
 
 .navigation__list {
   display: flex;
-  margin-left: 150px;
+  margin-left: 120px;
   @media screen and (max-width: 1279px) {
     display: none;
   }
@@ -45,6 +60,7 @@
   height: 44px;
   background: var(--text-main-color);
   color: var(--text-accent-color);
+  fill: var(--text-accent-color);
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -61,6 +77,7 @@
   &:hover,
   &:focus {
     color: #c7133e;
+    background-color: #ecebeb;
   }
 }
 
