--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,114 +1,115 @@
 .advantages {
-    background-color: var(--font-secondary-color);
-    max-width: 1280px;
-    margin: 0 auto;
+  background-color: var(--font-secondary-color);
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .advantages__list {
-    padding-bottom: 97px;
-    padding-left: 5px;
-    padding-right: 5px;
-
+  padding-bottom: 97px;
+  padding-left: 5px;
+  padding-right: 5px;
+  @media screen and (min-width: 768px) {
+    max-width: 786px;
+    margin: 0 auto;
+  }
 }
 
 .advantages__list-title {
-    font-style: 400;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 1.14;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    margin-bottom: 11px;
+  font-style: 400;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  margin-bottom: 11px;
 }
 
 .advantages__list-text {
-    font-family: DM Sans;
-    font-style: 400;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 1.7;
-    color: var(--text-alt-color);
+  font-family: DM Sans;
+  font-style: 400;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.7;
+  color: var(--text-alt-color);
 }
 
 .advantages__list-item {
-    &:not(:last-child){
-        margin-bottom: 38px;
-    }
-    margin-right: 70px;
+  &:not(:last-child) {
+    margin-bottom: 38px;
+  }
+  margin-right: 70px;
 }
 
 .milk::before {
-    content: url(../images/tablet/tablet-about-milk.png);
-    height: 50px;
-    width: 33px;
-    display: block;
-    margin-bottom: 16px;
+  content: url(../images/tablet/tablet-about-milk.png);
+  height: 50px;
+  width: 33px;
+  display: block;
+  margin-bottom: 16px;
 }
 
 .apple::before {
-    content: url(../images/tablet/tablet-about-apple.png);
-    height: 50px;
-    width: 50px;
-    display: block;
-    margin-bottom: 16px;
+  content: url(../images/tablet/tablet-about-apple.png);
+  height: 50px;
+  width: 50px;
+  display: block;
+  margin-bottom: 16px;
 }
 
 .heart::before {
-    content: url(../images/tablet/tablet-about-heart.png);
-    height: 50px;
-    width: 44px;
-    display: block;
-    margin-bottom: 16px;
+  content: url(../images/tablet/tablet-about-heart.png);
+  height: 50px;
+  width: 44px;
+  display: block;
+  margin-bottom: 16px;
 }
 
-@media(min-width:768px) {
-   .advantages__list-title {
+@media (min-width: 768px) {
+  .advantages__list-title {
     font-size: 48px;
     line-height: 1.14;
     margin-bottom: 13px;
-   } 
-   .advantages__list-text {
+  }
+  .advantages__list-text {
     font-size: 14px;
     line-height: 1.74;
-   }
-   .advantages__list {
-       display: flex;
-       padding-left: 21px;
-       padding-right: 21px;
-   }
-   .milk::before {
-       margin-bottom: 36px;
-   }
-   .apple::before {
-       margin-bottom: 36px;
-   }
-   .heart::before {
-       margin-bottom: 36px;
-   }
+  }
+  .advantages__list {
+    display: flex;
+    padding-left: 21px;
+    padding-right: 21px;
+  }
+  .milk::before {
+    margin-bottom: 36px;
+  }
+  .apple::before {
+    margin-bottom: 36px;
+  }
+  .heart::before {
+    margin-bottom: 36px;
+  }
 }
 
-@media(min-width:1280px)  {
-    .advantages__list-title {
-        font-size: 58px;
-        line-height: 1.14;
-        margin-bottom: 15px;
-    }
-    .advantages__list-text {
-        font-size: 16px;
-        line-height: 1.74;
-    }
-    .milk::before {
-        margin-bottom: 40px;
-    }
-    .apple::before {
-        margin-bottom: 40px;
-    }
-    .heart::before {
-        margin-bottom: 40px;
-    }
-    .advantages__list {
-        padding-left: 100px;
-        
-    }
-
+@media (min-width: 1280px) {
+  .advantages__list-title {
+    font-size: 58px;
+    line-height: 1.14;
+    margin-bottom: 15px;
+  }
+  .advantages__list-text {
+    font-size: 16px;
+    line-height: 1.74;
+  }
+  .milk::before {
+    margin-bottom: 40px;
+  }
+  .apple::before {
+    margin-bottom: 40px;
+  }
+  .heart::before {
+    margin-bottom: 40px;
+  }
+  .advantages__list {
+    padding-left: 100px;
+  }
 }
