--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,8 @@
 .header {
   width: 100%;
+  @media screen and (max-width: 767px) {
+    background-color: var(--font-primary-color);
+  }
 
   @media screen and (min-width: 768px) {
     position: absolute;
@@ -19,8 +22,8 @@
     padding-top: 37px;
     max-width: 800px;
     margin: 0 auto;
-    padding-left: 35px;
-    padding-right: 35px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   @media screen and (min-width: 1280px) {
     padding-right: 112px;
