--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,7 +3,6 @@
   margin: 0 auto;
   background-color: var(--font-primary-color);
   @media screen and (min-width: 768px) and (max-width: 1279px) {
-    max-width: 800px;
     padding: 0 20px;
   }
   @media screen and (min-width: 1280px) {
@@ -14,6 +13,9 @@
 }
 .hero .container {
   position: relative;
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    max-width: 800px;
+  }
   // background-color: var(--font-primary-color);
   // @media screen and (min-width: 1280px) {
   //   max-width: 1280px;
@@ -250,26 +252,26 @@
     background-repeat: no-repeat;
 
     background-size: 346px 419px;
-    background-position: left 33px bottom;
+    background-position: center 33px bottom;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  .hero {
+  .hero .container {
     background-image: url('../images/tablet/tablet-hero-girl.png'),
       url('../images/tablet/t-hero-icecream.png');
     background-repeat: no-repeat;
-    background-position: right 30px bottom, 70% bottom;
+    background-position: right 20px bottom, 70% bottom;
     background-size: 168px 133px, 324px 368px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  .hero {
+  .hero .container {
     background-image: url('../images/tablet/tablet-hero-girl@2x.png'),
       url('../images/tablet/t-hero-icecream@2x.png');
     background-repeat: no-repeat;
-    background-position: right 30px bottom, 70% bottom;
+    background-position: right 20px bottom, 70% bottom;
     background-size: 168px 133px, 324px 368px;
   }
 }
